--- a/old-zola/templates/page.html
+++ b/old-zola/templates/page.html
@@ -51,16 +51,16 @@
                 <div class="col-3" id="getintouch">
                     <h5 class="footer-heading">Get&nbsp;in&nbsp;touch with&nbsp;us</h5>
                     <p id="links">
-                        <a href="{{config.base_url}}rss.xml" target="_blank" rel="noopener" class="nocolorlink">
+                        <a href="{{config.base_url}}/rss.xml" target="_blank" rel="noopener" class="nocolorlink">
                             <i class="fa fa-fw fa-rss"></i>
                         </a>
-                        <a href="mailto:acm@umn.edu" target="_blank" rel="noopener" class="nocolorlink">
+                        <a href="mailto:info@kingfield.org" target="_blank" rel="noopener" class="nocolorlink">
                             <i class="fa fa-fw fa-envelope"></i>
                         </a>
                         <a href="https://www.facebook.com/KingfieldNeighborhoodAssociation" target="_blank" rel="noopener" class="nocolorlink">
                             <i class="fa fa-fw fa-facebook-square"></i>
                         </a>
-                        <a href="https://twitter.com/acmumn" target="_blank" rel="noopener" class="nocolorlink">
+                        <a href="https://twitter.com/Kingfield_KFNA" target="_blank" rel="noopener" class="nocolorlink">
                             <i class="fa fa-fw fa-twitter"></i>
                         </a>
                         <a href="https://instagram.com/kingfield_kfna/" target="_blank" rel="noopener" class="nocolorlink">
